--- a/imagesearch/templates/csvadd.html
+++ b/imagesearch/templates/csvadd.html
@@ -36,14 +36,14 @@
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">Name</label>
-                                                      <input type="text" name="name" id="" class="form-control" required>
+                                                      <input type="text" name="name" id="" class="form-control" >
                                                   </div>
                                                   
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">File</label>
-                                                      <input type="file" name="file" id="" class="form-control" required>
+                                                      <input type="file" name="file" id="" class="form-control" accept=".csv" required>
                                                   </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
