--- a/imagesearch/templates/imageadd.html
+++ b/imagesearch/templates/imageadd.html
@@ -41,16 +41,16 @@
                                       <div class="col-sm-12 col-lg-12 col-md-12">
                                           <div class="row">
                                               <div class="col-sm-12 col-md-12 col-lg-12">
-                                                  <div class="form-group p-2">
+                                                  <!-- <div class="form-group p-2">
                                                       <label for="" class="">Name</label>
-                                                      <input type="text" name="name" id="" class="form-control" required>
-                                                  </div>
+                                                      <input type="text" name="name" id="" class="form-control" >
+                                                  </div> -->
                                                   
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">File</label>
-                                                      <input type="file" name="file" id="" class="form-control" required>
+                                                      <input type="file" name="file" id="" class="form-control" accept="image/png, image/jpeg" multiple required>
                                                   </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
