--- a/imagesearch/templates/nbase.html
+++ b/imagesearch/templates/nbase.html
@@ -54,6 +54,7 @@
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
+      
     </div>
   </section>
 
@@ -67,8 +68,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
+          
          {% block header %}
          {% endblock %}
+         {% if user.is_authenticated %}
+         <a href="{% url 'logout' %}"  class="btn btn-outline-danger">logout</a>
+         {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
