--- a/imagesearch/templates/nindex.html
+++ b/imagesearch/templates/nindex.html
@@ -43,7 +43,7 @@
                               <div class="col-sm-12 col-md-12 col-lg-6">
                                   <div class="form-group p-2">
                                       <label for="" class="font-weight-bold"><b>Image Path</b> </label>
-                                      <input type="text" name="path" id="path" class="form-control" required>
+                                      <input type="text" name="path" id="path" class="form-control"  accept="image/png, image/jpeg" required>
                                   </div>
                                   
                               </div>
