--- a/imagesearch/templates/register.html
+++ b/imagesearch/templates/register.html
@@ -14,8 +14,8 @@
     <div class="container">
 
       <div class="section-title">
-        <span>LOGIN</span>
-        <h2>LOGIN</h2>
+        <span>REGISTER</span>
+        <h2>REGISTER</h2>
       </div>
       <div class="container-fluid">
   
@@ -26,38 +26,44 @@
                           <div class="card">
                               
                               <div class="card-body">
-                                  <form method="POST" enctype="multipart/form-data" id="loginform">
+                                  <form method="POST" enctype="multipart/form-data" id="registerform">
                                       {% csrf_token %}
                                       <div class="col-sm-12 col-lg-12 col-md-12">
-                                          <div class="col-12">
-                                            {% for i in  messages %}
-                                            <div class="alert alert-danger" role="alert" id="malert1">
-                                                {{i}}
-                                            </div>
-                                            <script>
-                                                $("#malert1").fadeOut(3000);
-                                            </script>
-                                            {% endfor %}
-                                          </div>
                                           <div class="row">
+                                            <div class="col-12">
+                                                <div class="alert alert-danger" role="alert" id="ralert"> </div>
+                                                {% for i in  messages %}
+                                                <div class="alert alert-danger" role="alert" id="malert">
+                                                    Username already exist.....
+                                                </div>
+                                                <script>
+                                                    $("#malert").fadeOut(3000);
+                                                </script>
+                                                {% endfor %}
+                                            </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2 text-center">
                                                      
                                                       <label for="" class=""><strong>USERNAME</strong></label>
-                                                      <input type="text" name="name" id="" class="form-control" required>
+                                                      <input type="text" name="name" id="" class="form-control" autocomplete="" required>
                                                   </div>
                                                   
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                 <div class="form-group p-2 text-center">
                                                     <label for="" class=""><strong>PASSWORD</strong></label>
-                                                    <input type="password" name="pass" id="" class="form-control" required>
+                                                    <input type="password" name="pass" id="cp1" class="form-control" required>
+                                                </div>
+                                              </div>
+                                              <div class="col-sm-12 col-md-12 col-lg-12">
+                                                <div class="form-group p-2 text-center">
+                                                    <label for="" class=""><strong>CONFIRM PASSWORD</strong></label>
+                                                    <input type="password" name="" id="cp2" class="form-control" required>
                                                 </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="text-center">
-                                                      <input type="submit" value="Login" class="btn btn-primary">
-                                                      <a href="{% url 'register' %}" class="btn btn-info">register here</a>
+                                                      <button id="sregister" class="btn btn-primary" type="submit">REGISTER</button>
                                                   </div>
                                               </div>
                                               
