--- a/imagesearch/templates/nbase.html
+++ b/imagesearch/templates/nbase.html
@@ -89,7 +89,7 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
       <h1>IMAGE SEARCH ENGINE</h1>
       <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#search" class="btn-get-started scrollto">Get Started</a>
+      <a href="{% url 'search' %}" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
   {% endblock %}
