--- a/imagesearch/templates/search.html
+++ b/imagesearch/templates/search.html
@@ -1,77 +1,99 @@
-{% extends "_base.html" %}<b></b>
-{% block content %}
+
+{% extends 'nbase.html' %}
 {% load static %}
-<div class="container-fluid">
-    <div class="col-12 m-2">
-       
-        <div class="row" id="maindiv" style="z-index: 10000;">
-            <div class="col-sm-2 col-md-2 col-lg-3"></div>
-            <div class="col-sm-8 col-md-8 col-lg-6">
-                <div class="card m-4">
-                    <div class="card-header">
-                        <span style="font-weight: bolder;">Image search</span>
-                    </div>
-                    <div class="card-body p-4">
-                        <form action="search2" method="POST" id="forms" enctype="multipart/form-data">
-                            {%csrf_token%}
-                            <div class="col-sm-12 col-lg-12 col-md-12">
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-12 col-lg-6">
-                                        <div class="form-group p-2">
-                                            <label for="" class="">File</label>
-                                            <input type="file" name="image" id="image" class="form-control" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-12 col-lg-6">
-                                        <div class="form-group p-2">
-                                            <label for="" class="">Image Path</label>
-                                            <input type="text" name="path" id="path" class="form-control" required>
-                                        </div>
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="form-group p-2">
-                                            <label for="" class="">Output limit</label>
-                                            <input type="number" name="limit" id="limit" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group p-2">
-                                            <label for="" class="">Max Score</label>
-                                            <input type="number" name="max" id="max" class="form-control">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="row">
-                                    <div class="col-2"></div>
-                                    <div class="col-sm-12 col-md-12 col-lg-4 m-1">
-                                        <button class="col-12 btn btn-danger" id="freset" type="button" disabled>Reset</button>
-                                    </div>
-                                    <div class="col-sm-12 col-md-12 col-lg-4 m-1">
-                                       <div class="form-group">
-                                        <input type="submit" value="Search" class="col-12 btn btn-primary" id="ldrr">
-                                       </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 p-3" id="laad">
-                                <div class="d-flex justify-content-center">
-                                    <img src="{% static '200.gif' %}" id="img1" style="display:none;">
-                                  </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+{% block title %}
+<title>CSV Add</title>
+{% endblock %}
+{% block header %}
+<li><a class="nav-link scrollto " href="{% url 'csvadd' %}">CSV Add</a></li>
+<li><a class="nav-link scrollto " href="{% url 'imageadd' %}">Image Add</a></li>
+{% endblock %}
+{% block hero %}
+{% endblock %}
+{% block maincontent %}
+
+ <!-- ======= About Section ======= -->
+ <section id="search" class="services">
+    <div class="container">
+
+      <div class="section-title">
+        <span>Image Search</span>
+        <h2>Image Search</h2>
+        <h6>add description here</h6>
+      </div>
+      <div class="col-12">
+        <div class="row">
+          <div class="col-sm-12 col-md-1 col-lg-2"></div>
+          <div class="col-sm-12 col-md-9 col-lg-8">
+            <div class="card p-4">
+              <div class="card-body">
+                <form action="search2" method="POST" id="forms" enctype="multipart/form-data">
+                  {%csrf_token%}
+                  <div class="col-sm-12 col-lg-12 col-md-12">
+                      <div class="row">
+                          <div class="col-sm-12 col-md-12 col-lg-6">
+                              <div class="form-group p-2">
+                                  <label for="" class="font-weight-bold"><b>File</b> </label>
+                                  <input type="file" name="image" id="image" class="form-control" required>
+                              </div>
+                          </div>
+                          <div class="col-sm-12 col-md-12 col-lg-6">
+                              <div class="form-group p-2">
+                                  <label for="" class="font-weight-bold"><b>Image Path</b> </label>
+                                  <input type="text" name="path" id="path" class="form-control"  accept="image/png, image/jpeg" required>
+                              </div>
+                              
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-sm-12">
+                      <div class="row">
+                          <div class="col-sm-6">
+                              <div class="form-group p-2">
+                                  <label for="" class="font-weight-bold"><b>Output limit</b></label>
+                                  <input type="number" name="limit" id="limit" class="form-control">
+                              </div>
+                          </div>
+                          <div class="col-sm-6">
+                              <div class="form-group p-2">
+                                  <label for="" class="font-weight-bold"><b>Max Score</b></label>
+                                  <input type="number" name="max" id="max" class="form-control">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-sm-12">
+                      <div class="row">
+                          <div class="col-2"></div>
+                          <div class="col-sm-12 col-md-12 col-lg-4 m-1">
+                              <button class="col-12 btn btn-danger" id="freset" type="button" disabled>Reset</button>
+                          </div>
+                          <div class="col-sm-12 col-md-12 col-lg-4 m-1">
+                             <div class="form-group">
+                              <button class="col-12 btn btn-primary"type="submit"  id="ldrr">
+                                Search <i class="fa fa-circle-o-notch fa-spin" id="img1" style="display:none;"></i>
+                              </button>
+                              <!-- <input type="submit" value="Search" class="col-12 btn btn-primary" id="ldrr"> -->
+                             </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-sm-12 p-3" id="laad">
+                      <div class="d-flex justify-content-center">
+                          <img src="{% static '200.gif' %}" id="img1" style="display:none;">
+                        </div>
+                  </div>
+              </form>
+              </div>
             </div>
-        </div> 
+          </div>
+        </div>
+       
+        </form>
+      </div>
+
     </div>
-    
-</div>
+  </section
+
 
 {% endblock %}
