score min,image name

--- a/imagesearch/templates/imageadd.html
+++ b/imagesearch/templates/imageadd.html
@@ -50,7 +50,7 @@
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">File</label>
-                                                      <input type="file" name="file" id="" class="form-control" accept="file/h5, image/jpeg" multiple required>
+                                                      <input type="file" name="file" id="" class="form-control" accept="image/jpeg,.tif" multiple required>
                                                   </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
