--- a/imagesearch/templates/search.html
+++ b/imagesearch/templates/search.html
@@ -56,8 +56,8 @@
                           </div>
                           <div class="col-sm-6">
                               <div class="form-group p-2">
-                                  <label for="" class="font-weight-bold"><b>Max Score</b></label>
-                                  <input type="number" name="max" id="max" class="form-control">
+                                  <label for="" class="font-weight-bold"><b>Min Score</b></label>
+                                  <input type="number" step="0.01" name="max" id="max" class="form-control">
                               </div>
                           </div>
                       </div>
