--- a/imagesearch/templates/nindex.html
+++ b/imagesearch/templates/nindex.html
@@ -7,12 +7,17 @@
 <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
 <li><a class="nav-link scrollto" href="#about">About</a></li>
 <li><a class="nav-link scrollto" href="{% url 'search' %}">Image Search</a></li>
-<li class="dropdown"><a href="#hero"><span>Admin</span> <i class="bi bi-chevron-right"></i></a>
+{% if user.is_staff or user.is_superuser %}
+<li class="dropdown"><a href="#hero"><span>Settings</span> <i class="bi bi-chevron-right"></i></a>
   <ul>
-    <li><a href="{% url 'csvadd' %}">Add MODEL</a></li>
-    <li><a href="{% url 'imageadd' %}">Add Image</a></li>
+    <li><a href="{% url 'csvadd' %}">MODEL</a></li>
+    <li><a href="{% url 'imageadd' %}">DATABASE</a></li>
+    {% if user.is_superuser %}
+      <li><a href="{% url 'userlist' %}">USERS</a></li>
+      {% endif %}
   </ul>
 </li>
+{% endif %}
 <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 {% endblock %}
 {% block maincontent %}
