--- a/imagesearch/templates/imageadd.html
+++ b/imagesearch/templates/imageadd.html
@@ -4,8 +4,9 @@
 <title>Image Add</title>
 {% endblock %}
 {% block header %}
-<li><a class="nav-link scrollto " href="{% url 'csvadd' %}">Add MODEL</a></li>
-<li><a class="nav-link scrollto " href="{% url 'imageadd' %}">Add Image</a></li>
+<li><a class="nav-link scrollto " href="{% url 'csvadd' %}">MODEL</a></li>
+<li><a class="nav-link scrollto " href="{% url 'imageadd' %}">DATABASE</a></li>
+<li><a class="nav-link scrollto " href="{% url 'userlist' %}">USERS</a></li>
 {% endblock %}
 {% block hero %}
 {% endblock %}
@@ -35,22 +36,38 @@
                                   </ul>
                                   {% endif %}
                               </div>
+                              <script>
+                                  function checkCount(){
+                                    var numFiles = $("#filed")[0].files.length;
+                                    if(numFiles>=100){
+                                        $("#status").css('display', 'block')
+                                        return true
+                                    }
+                                    else{
+                                        alert('Atleast 100 images needed to train images!!')
+                                    }
+                                    return false;
+                                  }
+                              </script>
                               <div class="card-body p-4">
-                                  <form action="" method="POST" enctype="multipart/form-data">
+                                  <form action="" method="POST" enctype="multipart/form-data" onsubmit="return checkCount();">
                                       {% csrf_token %}
                                       <div class="col-sm-12 col-lg-12 col-md-12">
                                           <div class="row">
                                               <div class="col-sm-12 col-md-12 col-lg-12">
-                                                  <!-- <div class="form-group p-2">
-                                                      <label for="" class="">Name</label>
-                                                      <input type="text" name="name" id="" class="form-control" >
-                                                  </div> -->
+                                                  <div class="form-group p-2">
+                                                      <label for="" class="">Image Type</label>
+                                                        <select name="name" id="" class="form-select">
+                                                            <option value="plant">Plants</option>
+                                                            <option value="animals">Animals</option>
+                                                        </select>
+                                                  </div>
                                                   
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">File</label>
-                                                      <input type="file" name="file" id="" class="form-control" accept="image/jpeg,.tif" multiple required>
+                                                      <input type="file" name="file" id="filed" class="form-control" accept="image/jpeg,.tif" multiple required>
                                                   </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
@@ -63,6 +80,12 @@
                                       </div>
                   
                                   </form>
+                                  <div class="col-12 text-center m-2" id="status" style="display: none;">
+                                    Training Initialized...
+                                    <div class="spinner-grow" role="status">
+                                        <span class="sr-only">Training Initialized...</span>
+                                      </div>
+                                  </div>
                               </div>
                           </div>
                       </div>
