--- a/imagesearch/templates/nbase.html
+++ b/imagesearch/templates/nbase.html
@@ -75,7 +75,9 @@
          {% block header %}
          {% endblock %}
          {% if user.is_authenticated %}
-         <a href="{% url 'logout' %}"  class="btn btn-outline-danger">logout</a>
+         <a href="{% url 'logout' %}"  class="btn btn-outline-danger">Logout</a>
+         {% else %}
+         <a href="{% url 'login' %}"  class="btn btn-outline-danger">Login</a>
          {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
