--- a/imagesearch/templates/csvadd.html
+++ b/imagesearch/templates/csvadd.html
@@ -5,9 +5,6 @@
 <title>CSV Add</title>
 {% endblock %}
 {% block header %}
-<li><a class="nav-link scrollto " href="{% url 'csvadd' %}">MODEL</a></li>
-<li><a class="nav-link scrollto " href="{% url 'imageadd' %}">DATABASE</a></li>
-li><a class="nav-link scrollto " href="{% url 'userlist' %}">USERS</a></li>
 {% endblock %}
 {% block hero %}
 {% endblock %}
@@ -28,22 +25,30 @@ li><a class="nav-link scrollto " href="{% url 'userlist' %}">USERS</a></li>
                       <div class="col-3"></div>
                       <div class="col-sm-6 col-md-6 col-lg-6">
                           <div class="card">
-                              
+                            <div class="text-center">
+                                {% if messages %}
+                                <ul class="messages">
+                                    {% for message in messages %}
+                                    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                                    {% endfor %}
+                                </ul>
+                                {% endif %}
+                            </div>
                               <div class="card-body p-4">
                                   <form action="" method="POST" enctype="multipart/form-data">
                                       {% csrf_token %}
                                       <div class="col-sm-12 col-lg-12 col-md-12">
                                           <div class="row">
-                                              <div class="col-sm-12 col-md-12 col-lg-12">
+                                              <!-- <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">Name</label>
                                                       <select name="name" id="" class="form-select">
-                                                        <option value="plant">Plants</option>
-                                                        <option value="Animals">Animals</option>
+                                                        <option value=airbus>Airbus</option>
+                                                        <option value="bomberdier">Bombardier</option>
                                                     </select>
                                                   </div>
                                                   
-                                              </div>
+                                              </div> -->
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2">
                                                       <label for="" class="">File</label>
