--- a/imagesearch/templates/edituser.html
+++ b/imagesearch/templates/edituser.html
@@ -13,8 +13,8 @@
  <section id="about" class="about" style="margin-top: -4%;">
     <div class="container">
       <div class="section-title">
-        <span>LOGIN</span>
-        <h2>LOGIN</h2>
+        <span>EDIT PROFILE</span>
+        <h2>EDIT PROFILE</h2>
       </div>
       <div class="container-fluid">
   
@@ -24,7 +24,7 @@
                       <div class="col-sm-12 col-md-6 col-lg-4">
                           <div class="card">
                               <div class="card-body">
-                                  <form method="POST" enctype="multipart/form-data" id="loginform">
+                                  <form method="POST" enctype="multipart/form-data">
                                       {% csrf_token %}
                                       <div class="col-sm-12 col-lg-12 col-md-12">
                                           <div class="col-12">
@@ -41,7 +41,7 @@
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="form-group p-2 text-center">
                                                       <label for="" class=""><strong>USERNAME</strong></label>
-                                                      <input type="text" name="name" id="" class="form-control" required>
+                                                      <input type="text" name="username" id="" value="{{data.username}}" class="form-control" required>
                                                   </div>
                                               </div>
                                               <!-- <div class="col-sm-12 col-md-12 col-lg-12">
@@ -58,14 +58,20 @@
                                             </div> -->
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                 <div class="form-group p-2 text-center">
-                                                    <label for="" class=""><strong>PASSWORD</strong></label>
-                                                    <input type="password" name="pass" id="" class="form-control" required>
+                                                    <label for="" class=""><strong>EMAIL</strong></label>
+                                                    <input type="email" name="email" id="" value="{{data.email}}" class="form-control" required>
+                                                </div>
+                                              </div>
+                                              <div class="col-sm-12 col-md-12 col-lg-12">
+                                                <div class="form-group p-2 text-center">
+                                                    <label for="" class=""><strong>EMPLOYEE ID</strong></label>
+                                                    <input type="text" name="first_name" id="" class="form-control" value="{{data.first_name}}" required>
                                                 </div>
                                               </div>
                                               <div class="col-sm-12 col-md-12 col-lg-12">
                                                   <div class="text-center">
-                                                      <input type="submit" value="Login" class="btn btn-primary">
-                                                      <a href="{% url 'register' %}" class="btn btn-info">register here</a>
+                                                      <input type="submit" value="SUBMIT" class="btn btn-primary">
+                                                      <a href="{% url 'userlist' %}" class="btn btn-secondary">CANCEL</a>
                                                   </div>
                                               </div>
                                               
