--- a/imagesearch/templates/nbase.html
+++ b/imagesearch/templates/nbase.html
@@ -12,8 +12,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <!-- <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon"> -->
+  
+  <!-- <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">  -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -26,17 +26,22 @@
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
   <script src="{% static 'demo.js' %}" type="text/javascript"></script>
+  
+
+  
   <!-- =======================================================
   * Template Name: Day - v4.6.0
   * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  {% block style %}
+  
+  {% endblock %}
 </head>
 
 <body>
@@ -71,6 +76,19 @@
 
       <nav id="navbar" class="navbar">
         <ul>
+          <li><a class="nav-link scrollto" href="{% url 'search' %}">Image Search</a></li>
+          {% if user.is_staff or user.is_superuser %}
+          <li class="dropdown"><a href="#hero"><span>Settings</span> <i class="bi bi-chevron-right"></i></a>
+            <ul>
+              <li><a href="{% url 'csvadd' %}">MODEL</a></li>
+              <li><a href="{% url 'imageadd' %}">DATABASE</a></li>
+              {% if user.is_superuser %}
+                <li><a href="{% url 'userlist' %}">USERS</a></li>
+                {% endif %}
+            </ul>
+          </li>
+          {% endif %}
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           
          {% block header %}
          {% endblock %}
@@ -176,6 +194,9 @@
 
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
+  <script src="{% static 'newjs.js' %}" type="text/javascript"></script>
+  {% block script %}
+  {% endblock %}
 
 </body>
 
