--- a/imagesearch/templates/userlist.html
+++ b/imagesearch/templates/userlist.html
@@ -5,18 +5,6 @@
 <title>User Management</title>
 {% endblock %}
 {% block header %}
-<li><a class="nav-link scrollto" href="{% url 'search' %}">Image Search</a></li>
-{% if user.is_staff or user.is_superuser %}
-<li class="dropdown"><a href="#hero"><span>Settings</span> <i class="bi bi-chevron-right"></i></a>
-    <ul>
-      <li><a href="{% url 'csvadd' %}">MODEL</a></li>
-      <li><a href="{% url 'imageadd' %}">DATABASE</a></li>
-      {% if user.is_superuser %}
-      <li><a href="{% url 'userlist' %}">USERS</a></li>
-      {% endif %}
-    </ul>
-  </li>
-{% endif %}
 {% endblock %}
 {% block hero %}
 {% endblock %}
@@ -49,9 +37,23 @@
                                     {% endif %}
                                 </td>
                                 <td style="text-align: center;">{% if i.is_staff %}
-                                    <a href="{% url 'userdeactivate' i.id %}" class="btn btn-danger btn-sm"><li class="fa fa-trash" data-bs-toggle="tooltip" data-bs-placement="top" title="Deactivate Access"></li></a>
+                                    <!-- <a href="{% url 'userdeactivate' i.id %}" class="btn btn-danger btn-sm"  data-bs-toggle="tooltip" data-bs-placement="top" title=""><li class="fa fa-trash"></li></a> -->
                                     {% else %}
-                                    <a href="{% url 'useractivate' i.id %}" class="btn btn-success btn-sm"><li class="fa fa-edit" data-bs-toggle="tooltip" data-bs-placement="top" title="Active Access"></li></a>
+                                   
+                                    <a href="{% url 'useractivate' i.id %}" class="btn btn-success btn-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Active Access">
+                                        <li class="fa fa-edit" ></li>
+                                    </a>
+                                    
+                                    {% endif %}
+                                    {% if not i.is_superuser %}
+                                    <a href="{% url 'userdeactivate' i.id %}" class="btn btn-danger btn-sm"  data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><li class="fa fa-trash"></li></a>
+                                    <a href="{% url 'superuser' i.id %}" class="btn btn-info btn-sm" data-bs-toggle="tooltip" data-bs-placement="right" title="Make As Superuser">
+                                        <li class="fa fa-edit" ></li>
+                                    </a>
+                                    {% else %}
+                                    <a href="{% url 'edituser' i.id %}" class="btn btn-primary btn-sm" data-bs-toggle="tooltip" data-bs-placement="right" title="Edit Profile">
+                                        <li class="fa fa-edit" ></li>
+                                    </a>
                                     {% endif %}
                                 </td>
                             </tr>
