--- a/imagesearch/templates/nindex.html
+++ b/imagesearch/templates/nindex.html
@@ -93,14 +93,14 @@
   
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="section-title">
           <span>About</span>
           <h2>About</h2>
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End About Section -->
 
 
